[package]
name = "tstpmove"
version = "1.0.0"
authors = ["Alex Cloudstar alexcloudstar@gmail.com"]
license = "MIT"
description = "A tool to move files to a new location and update their references"
readme = "README.md"
homepage = "https://github.com/alexcloudstar/tstpmove"
repository = "https://github.com/alexcloudstar/tstpmove"
keywords = ["move", "file", "reference", "update", "ts", "typescript"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
