[package]
name = "tstpmove"
version = "1.2.1"
authors = ["Alex Cloudstar alexcloudstar@gmail.com"]
license = "MIT"
description = "This is a simple tool to extract typescript types from multiple to a single file."
readme = "README.md"
homepage = "https://github.com/alexcloudstar/tstpmove"
repository = "https://github.com/alexcloudstar/tstpmove"
keywords = ["ts", "extract", "typescript"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
